# better-cpp-programmer

./: .gitignore  README.md
1. SOLID/: DependencyInversion.cpp  InterfaceSegregation.cpp  LiskovSubtitution.cpp  Open-Closed.cpp  SingleResponsibility.cpp
2. Design Patterns/: CyclicVisitor.cpp  Strategy.cpp
2. Design Patterns/Adapter/: Adapter.cpp
2. Design Patterns/Factory/: Factory.cpp
2. Design Patterns/MessageQueue/: CMakeLists.txt  Looper.h  Message.h  MessageHandler.h  UmlClass.txt  UmlSequences.txt
2. Design Patterns/Strategy/: Strategy.cpp  StrategyWithMSQ.cpp
2. Design Patterns/Visitor/: AclycVisitor.cpp
5. Effective Template/: ImplementTraits.cpp
7. Open source examples/kafka/: README.md
7. Open source examples/kafka/userprofile-service/: CMakeLists.txt  build-script.bash  class-diagram.txt  conanfile.py  detailed-sequence-diagram.txt  main.cpp  project-structure.txt  sequence-diagram.txt
7. Open source examples/kafka/userprofile-service/config/proto/: userprofile.proto
7. Open source examples/kafka/userprofile-service/include/config/: ServiceConfig.h  TopicConfig.h
7. Open source examples/kafka/userprofile-service/include/const/: KafkaConst.h
7. Open source examples/kafka/userprofile-service/include/domain/: User.h
7. Open source examples/kafka/userprofile-service/include/event/: Event.h
7. Open source examples/kafka/userprofile-service/include/handlers/: AuditEventHandler.h  Handler.h  NotificationEventHandler.h  OrderEventHandler.h
7. Open source examples/kafka/userprofile-service/include/kafka-integration/: KafkaMessageConsumer.h  KafkaMessageProducer.h
7. Open source examples/kafka/userprofile-service/include/logger/: LogLevel.h  LoggerStream.h
7. Open source examples/kafka/userprofile-service/include/repository/: UserRepository.h
7. Open source examples/kafka/userprofile-service/include/repository/connection/: IDatabaseConnection.h  SQLiteConnection.h
7. Open source examples/kafka/userprofile-service/include/service/: UserProfileService.h
7. Open source examples/kafka/userprofile-service/include/utils/: utils.h
7. Open source examples/kafka/userprofile-service/src/config/: ServiceConfig.cpp  TopicConfig.cpp
7. Open source examples/kafka/userprofile-service/src/domain/: User.cpp
7. Open source examples/kafka/userprofile-service/src/event/: Event.cpp
7. Open source examples/kafka/userprofile-service/src/handlers/: AuditEventHandler.cpp  NotificationEventHandler.cpp  OrderEventHandler.cpp
7. Open source examples/kafka/userprofile-service/src/kafka-integration/: KafkaMessageConsumer.cpp  KafkaMessageProducer.cpp
7. Open source examples/kafka/userprofile-service/src/repository/: UserRepository.cpp
7. Open source examples/kafka/userprofile-service/src/repository/connection/: SQLiteConnection.cpp
7. Open source examples/kafka/userprofile-service/src/service/: UserProfileService.cpp
